changes for new build

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build && cp -r src/assets/CNAME docs/.",
+    "build": "rm -rf docs && ng build && cp -r src/assets/CNAME docs/.",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
