--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/cli": "~12.2.9",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
+    "@types/jquery": "^3.5.6",
     "@types/lodash": "^4.14.175",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
