--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~12.2.0",
     "bootstrap": "^5.1.2",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "ngx-spinner": "^12.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
